More controllers and styling